--- a/src/ui/style.scss
+++ b/src/ui/style.scss
@@ -55,7 +55,7 @@ sass --watch style.scss:style.css
 	--spacing-unit: 1rem;
 	--border-rad: 5px;
 	--background-alpha: 0.9;
-	--animation-margin: 2rem ;
+	--animation-margin: 2rem;
 	--surface-0: #1e1e2e;
 	--surface-1: #181825;
 	--surface-2: #11111b;
@@ -261,11 +261,15 @@ footer {
 	transition: transform 1s ease;
 	align-items: center;
 	@include text-ellipsis; /* For vertical alignment*/
+	outline: none !important;
+	transition: background-color 0.1s ease-in-out;
 	/* border-radius: var(--border-rad);*/
 	/* @include scroll-on-hover(7s);*/
 
 	&:hover {
 		@include sidebar-item-active; /* Use mixin*/
+		background-color: var(--accent-active);
+
 		/* border: 1px solid var(--accent);*/
 	}
 
@@ -277,6 +281,7 @@ footer {
 	&.selected {
 		opacity: 1;
 		@include sidebar-item-active; /* Use mixin*/
+		// background-color: var(--accent-active);
 	}
 }
 
@@ -293,7 +298,6 @@ footer {
 	flex: 0 1 auto;
 	flex-direction: column;
 	min-height: 0;
-
 
 	/* Specific styles for the #settings tab*/
 	&#settings {
@@ -397,7 +401,7 @@ h1#config-set-title {
 			font-weight: bold;
 		}
 	}
-	&:focus{
+	&:focus {
 		outline: none;
 	}
 	&.compact {
@@ -535,7 +539,7 @@ h1#config-set-title {
 }
 
 /* --- Line Comment Item (Specific) ---*/
-.editor-item:has(>.editor-item-comment) {
+.editor-item:has(> .editor-item-comment) {
 	margin: 0;
 	padding: 0;
 	border: 1px solid transparent;
@@ -593,14 +597,18 @@ h1#config-set-title {
 	position: relative;
 	color: var(--text-2);
 	width: 100%;
+
 	&.disabled {
 		/* text-decoration: line-through;*/
 	}
-	// > .generic-editor {
-	// 	display: flex;
-	// 	flex-direction: row;
-	// 	gap: 1rem;
-	// }
+	.generic-editor {
+		// border: 1px solid red !important;
+		> * {
+			flex: 1 0 auto;
+			// border: red;
+			@include text-ellipsis;
+		}
+	}
 	> * {
 		&#key {
 			height: 100%;
@@ -621,10 +629,6 @@ h1#config-set-title {
 			white-space: nowrap;
 			@include text-ellipsis;
 		}
-	}
-	&:focus-visible,
-	&:focus {
-		// border: 0;
 	}
 }
 
